# SchemaTool.App

./: README-zh_CN.md  README.md  README_zh-cn.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  nffs-request.yml  nim-request.yml
.github/workflows/: publish.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: FrmHome.vue  FrmSettings.vue  Home.vue  Settings.vue
src/app/miniapps/: FrmLiteView.vue
src/assets/: main.css  tailwind.css
src/components/: Aside.vue  CompFileSelectButton.vue  CompItemCount.vue  CompSideButton.vue  Dropdown.vue  Header.vue  HeaderBar.vue  IconExcel.vue  ItemCount.vue  LayoutHeaderBar.vue  LayoutSideBar.vue  ThemeController.vue
src/modules/: ModCache.ts  ModDialog.ts  ModFileAnalyzer.ts  ModFileHandler.ts  ModFileHandlers.ts  ModFileSystem.ts  ModRouter.ts  ModSetting.ts  ModStore.ts  ModVariables.ts
src/modules/I18N/: ModI18N.ts  en.json  zh.json
src/modules/ItemData/: ModItemDB.ts
src/views/: Home.vue  Settings.vue
src/views/app/: Recipe.vue
