[package]
name = "SchemaTool-App"
version = "2.1.0"
description = "SchemaTool.App - Lightweight Minecraft Blueprint Toolbox"
authors = ["NEXORA Studios"]
edition = "2021"

[lib]
name = "schematoolapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
